--- a/css/mall-style.css
+++ b/css/mall-style.css
@@ -1,5 +1,6 @@
 /* common */
 *{-webkit-tap-highlight-color:rgba(0,0,0,0);}
+ul{list-style:none;padding:0;margin:0;}
 a{text-decoration:none}
 button:focus{box-shadow:none !important;}
 .ui-header .ui-title, .ui-footer .ui-title{margin:0 17%;}
@@ -10,26 +11,46 @@ button:focus{box-shadow:none !important;}
 
 /* header style */
 header{background:#fff !important;border:none !important}
-header .brand{background:url('../images/brand.png') 50% 50% no-repeat transparent !important;background-size:100%;box-shadow:none !important;border:none !important;width:23px;height:20px;}
+header .brand{background:url('../images/brand.png') 50% 50% no-repeat transparent !important;background-size:100% !important;box-shadow:none !important;border:none !important;width:24px;height:20px;margin-top:1px !important;}
 header .ui-input-search{border-radius:0 !important;-webkit-border-radius:0 !important;border:1px solid #91b5e0 !important;box-shadow:none}
 .ui-input-search input{min-height:1.2em;padding:.2em .4em .2em 1.8em;}
 header .ui-input-search:after{background:url('../images/icon-search.png') no-repeat;background-size:100% 100%;top:40%;width:20px;height:20px;}
 header .icon-header,.icon-header{background:url('../images/icon-header.png') no-repeat transparent !important;}
 header a.icon-header,.icon-header{border:none !important;padding:0 !important;-webkit-box-shadow:none !important;box-shadow:none !important;}
 .icon-header.mypage{background-position:0 5px !important;border:none;background-size:180% !important;width:35px;height:38px;}
-.icon-header.btn-cate-more{background-position:0 -60px !important;background-size:180% !important;width:35px !important;height:38px;position:absolute;margin:.2em 0;}
+.icon-header.btn-cate-more{background-position:0 -60px !important;background-size:180% !important;width:35px !important;height:38px;position:absolute;margin:.2em .2em .2em 0;}
 .btn-cate-more{position:absolute;right:0;}
 .category-bar{list-style:none;padding:0;margin:0;}
 .category-bar li{float:left;}
-.cate-more-detail{background:url('../images/bg-category-shadow.png') 50% 0 no-repeat;background-size:95%;z-index:1000;position:absolute;margin-top:45px !important;width:100%;background-color:rgba(58,121,200,0.8);}
-.category-bar-container{background:url('../images/bg-category.png') 0 100% repeat-x;height:45px;}
-.cate-more-detail{margin:0;}
+.cate-more-detail{background:url('../images/bg-category-shadow.png') 50% 0 no-repeat;background-size:100%;z-index:1000;position:absolute;margin-top:45px !important;width:100%;background-color:rgba(58,121,200,0.9);}
+.category-bar-container{background:url('../images/bg-category.png') 0 100% repeat-x;height:45px;-webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);-moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);}
+.cate-more-detail{margin:0;display:none;-webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.2);-moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.2);box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.2);}
 .category-bar a{display:block;padding:10px 0px 0 10px;color:#314c6f;font-weight:normal;font-size:1.1em;}
+.cate-more-detail li{background:url('../images/dot-white-5.png') 9px 50% no-repeat;float:left;width:49.8%;border:1px solid rgba(58, 109, 173, 0.75);border-width:0 1px 1px 0;}
+.cate-more-detail li:nth-child(even){border-right:none;}
+.cate-more-detail li a{display:block;margin-left:1em;padding:.6em .2em .5em .2em;text-shadow:none;color:#fff;font-weight:normal;}
+
+/* footer style */
+.ui-footer{background-color:rgba(41,104,182,0.9) !important;}
+.icon-footer:after{background:url('../images/icon-footer.png') 50% 0 no-repeat;background-size:100%;top:.2em;width:35px;height:35px;}
+.icon-footer,.icon-footer input[type='button']{border:none !important;background:transparent !important;}
 
 /* page style - main */
 #home .ui-header .ui-title{padding:0;}
 #home .ui-input-search{margin:.5em 0;}
-.exhibit-slick{clear:both;min-height:400px;}
+.exhibit-slick{clear:both;}
+.myinfo-main{background-color:#2968b6;overflow:hidden;}
+.myinfo-main div{float:left;padding:7px 1%;text-shadow:none;color:#fff;font-size:1.3em;font-weight:bold;}
+.myinfo-main div span{display:block;font-weight:normal;font-size:.7em;color:#bfeb63;}
+.myinfo-main .user-name{background:url('../images/bg-main-myinfo.png') 10% 100% no-repeat;background-size:65%;width:36%;text-align:right;}
+.myinfo-main .user-name span{margin-bottom:4px;font-size:.6em;color:#70c4ff;}
+.myinfo-main .user-remain-point{background:url('../images/icon-myinfo-remain-point') 10% 50% no-repeat;background-size:33%;border:1px solid #255da3;border-width:0 1px;padding-left:2.5em;}
+.myinfo-main .user-accum-point{background:url('../images/icon-myinfo-accum-point') 5% 50% no-repeat;background-size:33%;padding-left:2em;}
 
 /* slick - reset */
-.slick-arrow{display:none !important;}
+.slick-slider{margin-bottom:0;}
+.exhibit-slick a,.exhibit-slick img{width:100%;}
+.exhibit-slick .slick-prev,.exhibit-slick .slick-next{display:none !important;}
+.exhibit-slick .slick-dots{bottom:0px;margin-bottom:15px;}
+.slick-dots button{background-color:rgba(0,0,0,0.3);border:1px solid #fff;border-radius:15px !important;-webkit-border-radius:15px !important;-moz-border-radius:15px !important;width:10px;height:10px;padding:0;font-size:0px;}
+.slick-dots .slick-active button{background-color:#fff;border:1px solid rgba(0,0,0,0.4)}
