--- a/css/mall-style.css
+++ b/css/mall-style.css
@@ -14,9 +14,13 @@ a.go-top{
 	border-radius:50px;-moz-border-radius:50px;-webkit-border-radius:50px;color:#fff;
 	-webkit-box-shadow: 2px 3px 5px 0px rgba(0,0,0,0.3);-moz-box-shadow: 2px 3px 5px 0px rgba(0,0,0,0.3);box-shadow: 2px 3px 5px 0px rgba(0,0,0,0.3);
 }
+.pull-left{float:left !important;}
+.pull-right{float:right !important;}
+.border-bottom-blue{border-bottom:2px solid #3a79c8 !important;}
 
 /* header style */
 header{background:#fff !important;border:none !important}
+header h1{color:#3a79c8;font-size:1.4em !important;text-shadow:none !important;font-weight:400;line-height:2;}
 header .brand{background:url('../images/brand.png') 50% 45% no-repeat transparent !important;background-size:100% !important;box-shadow:none !important;border:none !important;width:24px;height:20px;margin-top:1px !important;}
 header .ui-input-search{border-radius:0 !important;-webkit-border-radius:0 !important;border:1px solid #91b5e0 !important;box-shadow:none}
 .ui-input-search input{min-height:1.2em;padding:.2em .4em .2em 1.8em;}
@@ -24,11 +28,14 @@ header .ui-input-search:after{background:url('../images/icon-search.png') no-rep
 header .icon-header,.icon-header{background:url('../images/icon-header.png') no-repeat transparent !important;}
 header a.icon-header,.icon-header{border:none !important;padding:0 !important;-webkit-box-shadow:none !important;box-shadow:none !important;}
 .icon-header.mypage{background-position:0 5px !important;border:none;background-size:180% !important;width:35px;height:38px;}
-.icon-header.btn-cate-more{background-position:0 -60px !important;background-size:180% !important;width:35px !important;height:38px;position:absolute;margin:.2em .2em .2em 0;}
+.icon-header.back{background-position:8px -113px !important;border:none;background-size:180% !important;width:33px;height:36px;}
+.icon-header.list{background-position:0 -182px !important;border:none;background-size:180% !important;width:35px;height:38px;}
+.icon-header.btn-cate-more{background-position:0 -60px !important;background-size:180% !important;width:35px !important;height:38px;position:relative;margin:.2em .2em .2em 0;}
 .btn-cate-more{position:absolute;right:0;}
 .category-bar{list-style:none;padding:0;margin:0;}
 .category-bar li{float:left;}
-.cate-more-detail{background:url('../images/bg-category-shadow.png') 50% 0 no-repeat;background-size:100%;z-index:1000;position:absolute;margin-top:45px !important;width:100%;background-color:rgba(58,121,200,0.9);}
+.cate-more{margin-left:10px;}
+.cate-more-detail{background:url('../images/bg-category-shadow.png') 50% 0 no-repeat;background-size:100%;z-index:1000;position:absolute;left:0;width:100%;background-color:rgba(58,121,200,0.9);}
 .category-bar-container{background:url('../images/bg-category.png') 0 100% repeat-x;height:45px;-webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);-moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);}
 .cate-more-detail{margin:0;display:none;-webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.2);-moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.2);box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.2);}
 .category-bar a{display:block;padding:10px 0px 0 10px;color:#314c6f;font-weight:normal;font-size:1.1em;}
@@ -88,6 +95,30 @@ header a.icon-header,.icon-header{border:none !important;padding:0 !important;-w
 .recommend .product-desc{margin-top:.1em;width:100%;text-overflow:ellipsis;overflow:hidden;height:30px;font-size:.7em;font-weight:200;color:#666;}
 .recommend .product-price{margin-top:.1em;font-size:.9em;color:#fa5413;}
 .tag-korea{position:relative;float:right;width:45px !important;height:41px;margin-top:7px;margin-bottom:-45px;}
+
+/* page style - category main */
+.sort-option a{display:inline-block;padding-left:5px;color:#666;font-size:1em;font-weight:300;}
+.sort-option .arrow-up:after{content:"";background:url('../images/icon-set1.png') 0 5px no-repeat;background-size:300%;width:20px;height:15px;display:inline-block;margin-left:5px;}
+.sort-option .arrow-down:after{content:"";background:url('../images/icon-set1.png') 0 5px no-repeat;background-size:300%;background-position:0 -55px;width:20px;height:15px;display:inline-block;margin-left:5px;}
+
+/* page style - category */
+.category-tab{padding:0;}
+.tablist-left{float:left;width:35%;margin:0 !important;box-shadow:none;-webkit-border-radius:0 !important;border-radius:0 !important;}
+.tablist-left a{
+	background-color:#454c5f !important;border:none !important;border-bottom:1px solid #5D6373 !important;padding:.6em .5em;
+	text-shadow:none !important;color:#fff !important;font-weight:300;font-size:.9em;
+}
+.tablist-left a:after{background:url('../images/icon-set1.png') 0 5px no-repeat;background-size:300%;background-position:0 -129px;opacity:0;}
+.tablist-left .ui-tabs-active a{background-color:transparent !important;color:#2968b6 !important;font-weight:700;}
+.tablist-left .ui-tabs-active a:after{opacity:1;}
+.category-tab .tablist-content{float:left;width:63%;margin-left:2%;}
+.category-tab .tablist-content li{float:left;width:33%;text-align:center;border-bottom:1px dotted #ccc;padding:.5em 0;}
+.category-tab .tablist-content li a{font-size:.9em;color:#585858 !important;font-weight:400;}
+.category-tab .tablist-content li img{width:45%;display:block;margin:auto;}
+
+/* page style - detail info */
+.product-detail-slick button{display:none !important;}
+.product-detail-slick img{width:100%;}
 
 /* slick - reset */
 .slick-slider{margin-bottom:0;}
