--- a/css/mall-style.css
+++ b/css/mall-style.css
@@ -18,6 +18,8 @@ a.go-top{
 .pull-right{float:right !important;}
 .align-center{text-align:center !important;;}
 .border-bottom-blue{border-bottom:2px solid #3a79c8 !important;}
+.border-bottom-lightgray{border-bottom:1px solid #e5e5e5 !important;}
+.border-rl-lightgray{border:1px solid #e5e5e5;border-width:0 1px;}
 .shadow-inset{-webkit-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.1);-moz-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.1);box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.1);}
 .float-clear{clear:both !important;}
 .price-color{color:#fa5413 !important;}
@@ -104,16 +106,16 @@ header a.icon-header,.icon-header{border:none !important;padding:0 !important;-w
 .exhibit-type1 a.banner{width:46%;border-left:1px solid #e5e5e5;}
 .exhibit-type1 a.banner:nth-child(odd){border-top:1px solid #e5e5e5;}
 .exhibit-type1 a img{width:100%;}
-.recommend .title{margin-top:.3em;font-size:1.1em;font-weight:700;color:#585858;}
-.recommend{padding:.2em .5em;}
-.recommend a{width:48%;float:left;margin-bottom:15px;}
-.recommend a:nth-child(even){margin-right:3%;}
+.recommend .title{margin-top:.3em;padding:0 .5em;border-bottom:1px solid #e5e5e5;font-size:1.1em;font-weight:700;color:#585858;}
+.recommend{padding:.2em 0;}
+.recommend a{width:45.8%;float:left;padding:.5em 2%;border-bottom:1px solid #e5e5e5;}
+.recommend a:nth-child(even){border-right:1px solid #e5e5e5;}
 .recommend a img{width:100%;}
 .recommend span{display:block;}
 .recommend .product-name{margin-top:.3em;width:100%;text-overflow:ellipsis;overflow:hidden;height:15px;font-size:.9em;font-weight:700;color:#333;}
 .recommend .product-desc{margin-top:.1em;width:100%;text-overflow:ellipsis;overflow:hidden;height:30px;font-size:.7em;font-weight:200;color:#666;}
 .recommend .product-price{margin-top:.1em;font-size:.9em;color:#fa5413;}
-.tag-korea{position:relative;float:right;width:45px !important;height:41px;margin-top:7px;margin-bottom:-45px;}
+.tag-korea{position:relative;float:right;width:45px !important;height:41px;top:7px;margin-bottom:-45px;}
 
 /* page style - category main */
 .sort-option a{display:inline-block;padding-left:5px;color:#666;font-size:1em;font-weight:300;}
@@ -208,6 +210,10 @@ header a.icon-header,.icon-header{border:none !important;padding:0 !important;-w
 /* page style - order complete */
 .order-number{padding:.5em;text-align:center;text-shadow:none;color:#fff;font-size:1.3em;font-weight:600;}
 .order-number label{margin:0;font-size:1em;font-weight:400;color:#0befe7;}
+
+/* page style - specialist */
+.banner-3column a{width:33%;float:left;display:inline-block;}
+.banner-3column a img{width:100%;}
 
 /* slick - reset */
 .slick-slider{margin-bottom:0;}
