--- a/css/hnf.css
+++ b/css/hnf.css
@@ -32,3 +32,4 @@ header a.icon-header,.icon-header{border:none !important;padding:0 !important;-w
 .icon-footer.cart:before{background-position:50% -137px}
 .icon-footer.order:before{background-position:50% -207px}
 .icon-footer.mypage:before{background-position:50% -277px}
+.badge{position:absolute;margin-top:-2.8em;margin-left:-2em;background-color:#f7482c;-webkit-border-radius:10px !important;border-radius:10px !important;padding:3px 5px 2px 3px;font-size:.9em;}
